--- a/slides/tfp07/slides.tex
+++ b/slides/tfp07/slides.tex
@@ -45,7 +45,7 @@
 \begin{frame}
   \begin{center}
     \textcolor{red}{\LARGE Designing a Generic Graph Library \\[0.7em]
-      using ML Funtors}\\[2em]
+      using ML Functors}\\[2em]
 
     {\large Sylvain Conchon, Jean-Christophe Filliâtre}
     \\[0.7em]
@@ -53,8 +53,11 @@
     \textcolor{red}{\large \textit{Julien Signoles}}\\[0.7em]
     \textcolor{blue}{\large CEA LIST}
   \end{center}
-  \includegraphics[width=0.15\textwidth]{cealist.pdf}\\[-0.5em]
-  \hfill\includegraphics[width=0.15\textwidth]{lrilogo.jpg}\\[-0.5em]
+  ~\hfill
+  \includegraphics[width=0.15\textwidth]{cealist.pdf}
+  \hfill\hfill
+  \includegraphics[width=0.15\textwidth]{lrilogo.jpg}
+  \hfill~
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -126,6 +129,11 @@
     \hfill \excode{Abstract} or \excode{Concrete}
     \vskip10pt
   \end{itemize}
+
+\bigskip
+\begin{center}
+all possibilities provided as \emph{functors}
+\end{center}
 \end{frame}
 
 \begin{frame}[fragile]
@@ -213,7 +221,7 @@ module G = \emph{Persistent.Graph.ConcreteLabeled}(S)(S)
   \frametitle{Example: Shortest Path}
 
   \begin{enumerate}
-  \item instantiating the functor
+  \item \emph{instantiating} the functor
   \begin{alltt}
     module W = struct
       type t = int
@@ -224,7 +232,7 @@ module G = \emph{Persistent.Graph.ConcreteLabeled}(S)(S)
     module Dij = \emph{Path.Dijkstra}(G)(W)
   \end{alltt}
 
-  \item using the resulting module
+  \item \emph{using} the resulting module
   \begin{alltt}
     let path,w = \emph{Dij.shortest_path} g v1 v2
   \end{alltt}
@@ -254,21 +262,21 @@ end
 \begin{frame}
   \frametitle{Existing algorithms}
   \begin{itemize}
-  \item Traversal: 7 DFS, 2 BFS, 2 cycle detections
-  \item Building:
+  \item traversal: 7 DFS, 2 BFS, 2 cycle detections
+  \item building:
     \begin{itemize}
-    \item 4 classics (ex. de Bruijn's graph)
-    \item 2 randoms (ex. planar graph) 
+    \item classic graphs (e.g. de Bruijn's)
+    \item random graphs (e.g. planar graph) 
     \end{itemize}
   \item Dijkstra's shortest path
-  \item Strongly connected components
+  \item strongly connected components
   \item Goldberg's and Ford-Fulkerson's maximal flow.
   \item $k$-coloring
-  \item Topological sorting
+  \item topological sorting
   \item Kruskal's minimum spanning tree
-  \item Misc. operations: transitive closure, complementary, miror,
-    neighbourhood, \dots
-  \item Interfaces with Graphviz and GML.
+  \item misc. operations: transitive closure, complement, mirror,
+    neighborhood, \dots
+  \item interfaces with Graphviz and GML
 \end{itemize}
 \end{frame}
 
@@ -297,37 +305,38 @@ end
 \end{frame}
 
 \begin{frame}
-  \frametitle{Providing specialized blocks}
+  \frametitle{Graph Data Structures}
   \begin{center}
     \bleu{How to provide 19 implementations \\ 
       without code duplication?}
   \end{center}
   \pause
   \begin{enumerate}
-  \item Abstracting the underlying implementation (map or hashtable) by using a
-  common signature \excode{HM}. 
+  \item 
+    abstracting the underlying implementation (AVL or hash table) by using a
+    common signature \excode{HM}
+
   \vskip8pt\pause
-  \item Providing specialized blocks as functors parameterized by a \excode{HM}
-    implementation and by others operations:
+  \item 
+    one functor for each feature
     \vskip1pt
     \begin{itemize}
-    \item \excode{Minimal}: common operations to all data structures.
+    \item \excode{Minimal}: common operations
       \vskip6pt
-    \item \excode{Labeled}/\excode{Unlabeled}: operations on (un)labeled edges.
+    \item \excode{Labeled}/\excode{Unlabeled}
       \vskip6pt
-    \item \excode{Pred}: operations on predecessors from successors.
+    \item \excode{Pred}: predecessors from successors
       \vskip6pt
-    \item \excode{Make\_Abstract}: operations on abstract graphs from a
-    concrete version.
+    \item \excode{Make\_Abstract}: abstract graphs from concrete ones
     \end{itemize}
   \end{enumerate}
 \end{frame}
 
 \begin{frame}[containsverbatim]
-  \frametitle{Putting blocks together}
-\begin{center}
-\excode{Make}: an higher-order functor.
-\end{center}
+  \frametitle{Example}
+
+persistent or imperative unlabeled directed graphs
+
 \begin{alltt}
 \motcle{module} Make
   (F: \motcle{functor}(X: COMPARABLE) \fleche
@@ -335,65 +344,41 @@ end
 \motcle{struct}
   \motcle{module} Digraph = \motcle{struct}
     \motcle{module} Concrete(V: COMPARABLE) = \motcle{struct}
-      \motcle{include} ConcreteVertex(F)(V)
-      \motcle{include} Unlabeled(V)(HM)
-      \motcle{include} Minimal(S)(HM)
+      \motcle{include} \emph{ConcreteVertex}(F)(V)
+      \motcle{include} \emph{Unlabeled}(V)(HM)
+      \motcle{include} \emph{Minimal}(S)(HM)
     \motcle{end}
     ...
 \motcle{end}
 \end{alltt}
 \end{frame}
 
-\begin{frame}[containsverbatim]
-  \frametitle{Instantiation and specialisation}
-  \begin{alltt}
-\motcle{module} P = Make(Make_Map)
-\motcle{module} Digraph = struct
-  \motcle{module} Concrete (V: COMPARABLE) = \motcle{struct}
-    \motcle{include} P.Digraph.Concrete(V)
-    \motcle{let} add_vertex g v = 
-      \motcle{if} HM.mem v g \motcle{then} g 
-      \motcle{else} unsafe_add_vertex g v
-    ...
-  \motcle{end}
-\motcle{end}
-\end{alltt}
+\begin{frame}
+  \frametitle{Code Factorization}
 
   \begin{center}
-    All together, 19 data structures with 45 operations, i.e.
+    all together, 19 data structures with 45 operations \\[1em]
     
-    \emph{855 operations in 1000 lines of code}.
+    \emph{855 operations in 1000 lines of code}
   \end{center}
 \end{frame}
 
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 
 \begin{frame}
   \frametitle{Outline}
   \begin{itemize}
-  \item \textcolor{black!30}{Graph data structures: interface\vskip15pt
-  \item Graph data structures: implementation\vskip15pt}
-  \item Graph algorithms\vskip15pt
-  \item \textcolor{black!30}{Conclusion}
-  \end{itemize}
-\end{frame}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%\section[Conclusion]{}
-
-\begin{frame}
-  \frametitle{Outline}
-  \begin{itemize}
-    \item \textcolor{black!30}{Graph data structures: interface\vskip15pt
-    \item Graph data structures: implementation\vskip15pt
-    \item Graph algorithms\vskip15pt}
+    \item \textcolor{black!30}{Using OcamlGraph\vskip15pt
+    \item Implementing OcamlGraph\vskip15pt}
   \item Conclusion
   \end{itemize}
 \end{frame}
 
 \begin{frame}
   \frametitle{Comparison}
+  \begin{center}
   \begin{tabular}{|l||c|c|c|c|c|}
     \hline
      Library & Language     &P/I& Genericity & Data struct. \\\hline\hline
@@ -406,28 +391,29 @@ end
 %     Baire & Ocaml &P/I& ---      & 8  \\\hline
      \emph{\ocamlgraph}& Ocaml &P/I& \present & \emph{19} \\\hline
   \end{tabular}
+  \end{center}
 \end{frame}
 
 \begin{frame}
-  \frametitle{Numbers}
+  \frametitle{Figures}
   \begin{itemize}
-  \item \ocamlgraph, that is:\vskip2pt
+  \item \ocamlgraph\ is\vskip2pt
     \begin{itemize}
-    \item $\approx$ 7000 lines of code ($\approx$ 2000 lines of contributions)
+    \item 7000 lines of code (2000 lines of external contributions)
       \vskip7pt
-    \item 9 men-weeks of works
+    \item 9 men-weeks of work
     \end{itemize}
     \begin{center}
-      \emph{Only possible thanks to ML functors.}
+      \emph{only possible thanks to ML functors}
     \end{center}\vskip10pt
     \pause
-  \item Benchmarks (imperative abstract graphs):\vskip2pt
+  \item benchmarks\vskip2pt
     \begin{itemize}
-    \item create 100 000 edges per second\vskip7pt
-    \item visit between 500 000 and 1 million edges per second
+    \item creation rate $\approx$ 100 000 edges per second\vskip7pt
+    \item traversal rate $\approx$ 1 million edges per second
     \end{itemize}
     \begin{center}
-      \emph{Reasonably efficient.}
+      \emph{compares to other graph libraries}
     \end{center}
   \end{itemize}
 \end{frame}
