--- a/slides/tfp07/slides.tex
+++ b/slides/tfp07/slides.tex
@@ -30,7 +30,7 @@
 \let\emph\oemph
 
 \author{Julien Signoles}
-\institute{CEA}
+\institute{CEA LIST}
 \title{Designing a Generic Graph Library}
 \date{April 4th, 2007}
 
