--- a/tfp07/biblio.bib
+++ b/tfp07/biblio.bib
@@ -127,3 +127,19 @@
   note =	 {At \url{http://www.haskell.org/pipermail/haskell/2004-August/014463.html}}
 }
 
+@inproceedings{Dreyer2007,
+author = {Dreyer, D.  and Harper, R.  and Chakravarty, M. M. T. },
+booktitle = {POPL},
+title = {Modular Type Classes},
+url = {http://www.cse.unsw.edu.au/~chak/papers/mtc-popl.pdf},
+year = {2007}
+}
+
+[2] 
+@misc{Wehr2005,
+  title  = "\emph{{ML} Modules and {Haskell} Type Classes: A Constructive Comparison}",
+  year   = {2005},
+  author = {Stefan Wehr},
+  month  = nov,
+  note   = {Submitted for publication and available at \url{http://www.stefanwehr.de/diplom}}
+}
