--- a/tfp07/main.tex
+++ b/tfp07/main.tex
@@ -642,6 +642,7 @@ library where data structures and algorithms are separated.
 
 % \end{thebibliography}
 
+\newpage
 \appendix
 \section{Simple Sudoku Solver using Ocamlgraph}\label{appendix}
 Below is the full listing for a Sudoku solver using \ocamlgraph, as
