remplacement de == par = sur des int

--- a/slides/tfp07/slides.tex
+++ b/slides/tfp07/slides.tex
@@ -110,7 +110,7 @@
 %\section[Interface]{}
 
 \begin{frame}[containsverbatim]
-  \frametitle{Using a graph library}
+  \frametitle{Using a Graph Library}
   \begin{center}
     \bleu{What kind of graphs do you need?}
   \end{center}
@@ -178,7 +178,7 @@ module G = \emph{Persistent.Graph.ConcreteLabeled}(S)(S)
 % \end{frame}
 
 
-\begin{frame}\frametitle{All graph data structures}
+\begin{frame}\frametitle{All Graph Data Structures}
   \includegraphics[width=\textwidth]{interface.pdf} 
 \vskip-1pt
 \begin{itemize}
@@ -191,7 +191,7 @@ module G = \emph{Persistent.Graph.ConcreteLabeled}(S)(S)
 \end{frame}
 
 \begin{frame}[fragile]
-  \frametitle{Graph operations}
+  \frametitle{Graph Operations}
   \begin{itemize}
   \item \emph{creation} (insertion, suppression, etc.)
     \begin{alltt}
@@ -209,7 +209,7 @@ module G = \emph{Persistent.Graph.ConcreteLabeled}(S)(S)
 \end{frame}
 
 \begin{frame}
-  \frametitle{Graph algorithms}
+  \frametitle{Graph Algorithms}
 
   \begin{center}
     written independently of the graph implementation\\[1.2em]
@@ -260,7 +260,7 @@ end
 \end{frame}
 
 \begin{frame}
-  \frametitle{Benefits of functorized algorithms}
+  \frametitle{Benefits of Functorized Algorithms}
 
   \begin{itemize}
   \item clearly \emph{separates} algorithm from data structure\vskip8pt
@@ -271,7 +271,7 @@ end
 \end{frame}
 
 \begin{frame}
-  \frametitle{Existing algorithms}
+  \frametitle{Existing Algorithms}
   \begin{itemize}
   \item traversal: 7 DFS, 2 BFS, 2 cycle detections
   \item building:
