--- a/editor/rapport-ter/biblio.bib
+++ b/editor/rapport-ter/biblio.bib
@@ -1,7 +1,7 @@
 
-@InProceedings{miquel00,
+@InProceedings{miquel,
   author = 	 {Alexandre Miquel},
-  title = 	 {Un afficheur générique d'arbres à l'aide de la géométrie hyperbolique},
+  title = 	 {Affichage générique d'arbres à l'aide de la géométrie hyperbolique},
   booktitle =	 {Onzièmes journées francophones des langages applicatifs (JFLA'00)},
   year =	 2000
 }
@@ -11,8 +11,20 @@
   note =	 {\url{http://caml.inria.fr}}
 }
 
-@Misc{ocamlgraph,
-  title =	 {{La bibliothèque \ocamlgraph}},
+
+
+
+@InProceedings{ocamlgraph,
+  author = 	 {Sylvain Conchon and Jean-Christophe Filliâtre and Julien Signoles},
+  title = 	 {Designing a Generic Graph Library using ML Functors},
+  booktitle =	 {Symposium on Trends in Functional Programming (TFP'07)},
+  year =	 2007,
   note =	 {\url{http://ocamlgraph.lri.fr}}
+}
+
+
+@Misc{graphviz,
+  title =	 {Le monde de \graphviz},
+  note =	 {\url{http://www.graphviz.org/}}
 }
 
