--- a/editor/rapport-ter/rapport.tex
+++ b/editor/rapport-ter/rapport.tex
@@ -34,7 +34,7 @@ noeuds : les arêtes se croisent, à ne plus savoir qui est relié à qui.
 
 Bien des gens se sont penchés sur ce thème et un grand nombre
 d'algorithmes de placement dans le plan en ont résulté. On peut citer
-\graphviz\cite{graphviz} comme suite logicielle très connue dans le
+\graphviz~\cite{graphviz} comme suite logicielle très connue dans le
 domaine de la visualisation planaire de graphes qui applique bon
 nombre de ces algorithmes.
 D'autres ont essayé de se pencher sur ce problème en ajoutant une
@@ -44,12 +44,12 @@ tout à fait au problème d'amélioration de lisibilité du graphe, étant
 donnée qu'à l'heure actuel la visualisation dans l'espace n'est pas
 forcément des plus aisée sur un écran plan.
 
-L'objectif de ce stage est de se penchr sur ce sujet mais en l'abordant
+L'objectif de ce stage est de se pencher sur ce sujet mais en l'abordant
 différemment, et ce en utilisant une représentation planaire,
 mais dans le plan hyperbolique de Poincaré contrairement au plan
 Euclidien couramment utilisé.
 Le point de départ de ce TER est le travail effectué par Alexandre
-Miquel\cite{miquel} sur la représentation d'arbre à l'aide de la
+Miquel~\cite{miquel} sur la représentation d'arbre à l'aide de la
 géométrie hyperbolique.
 
 Nous allons tout d'abord expliquer les grands principe de la géométrie
@@ -57,7 +57,7 @@ hyperbolique, et plus particulièrement dans le plan hyperbolique de
 Poincaré.
 Ensuite, nous ferons le lien entre cette géométrie non euclidienne et
 son application à la représentation de graphes.
-Et enfin, nous nous pencherons sur sa réalisation en \ocaml  en
+Et enfin, nous nous pencherons sur sa réalisation en \ocaml\ en
 utilisant la librairie \ocamlgraph.
 
 
