--- a/editor/rapport-ter/rapport.tex
+++ b/editor/rapport-ter/rapport.tex
@@ -65,6 +65,16 @@ utilisant la librairie \ocamlgraph.
 
 \subsection{Principe}
 
+La géométrie Euclidienne est fondé sur cinq axiomes dictés par Euclide
+dans ses ``Éléments''. Un de ces axiome, le cinquième, a été remis en
+question dès la renaissance, et c'est environ en 1850 que Bolyai et
+Lobatchevsky ont indépendamment découvert la géométrie hyperbolique
+qui vérifie tous les axiomes d'Euclide, sauf le cinquième qui peut
+être formulé comme ceci : ``Étant doné une droite D et un point A, il ne passe
+qu'une seule droite par A et parallèle à D''.
+La géométrie hyperbolique est donc basé sur le fait qu'en un point A, il
+peut passer plusieurs droite parallèles à la droite D.
+
 \subsection{Tortue hyperbolique}
 
 \section{Visualisation}
