--- a/editor/rapport-ter/rapport.tex
+++ b/editor/rapport-ter/rapport.tex
@@ -105,6 +105,15 @@ de cercle perpendiculaires à C comme illustré ci-dessous.
 
 \includegraphics[scale=0.50]{perpendiculaire.ps}
 
+Ce modèle est doté d'une métrique, qui permet de calculer la distance
+entre deux point et dont la formule est la suivante :
+
+delta(a,b) = ath(abs((a-b)/(1-äb))) où ath(x) = 1/2(ln((1+x)/(1-x)))
+
+On peut remarquer que si l'un des deux points a ou b se rapproche du
+bord C du disque, alors la distance tend vers l'infini, ce qui montre
+bien que le bord est inatteignable
+Un des grand principe de ce modèle 
 
 \subsection{Tortue hyperbolique}
 
